[build-system]
requires = ["hatchling", "requests"]
build-backend = "hatchling.build"

[project]
name = "random_ellipticobj"
version = "0.0.1"
authors = [
  { name="Natalie Luna", email="luna@hackclub.app" },
]
description = "a small pip module to generate true random numbers using random.org's api"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ellipticobj/random-module"
Issues = "https://github.com/ellipticobj/random-module/issues"